fixing spacing issue on home page

--- a/media/css/course.css
+++ b/media/css/course.css
@@ -939,6 +939,7 @@ margin: 1.5em 1em .5em 1em;
 ul.clumper {
     list-style:none;
     margin:0;
+    padding: 10px;
 }
 
 a.bookmarklet {
